fix overflow

--- a/src/components/SideBar/styles.scss
+++ b/src/components/SideBar/styles.scss
@@ -6,6 +6,7 @@
   top: 0;
   height: 100%;
   width: 30%;
+  overflow-y: auto;
   background-color: gray;
   opacity: 75%;
   transition: opacity 0.5s;
